--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -144,6 +144,7 @@ img {
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
   margin: 0 auto;
+  display: block;
 }
 
 @keyframes rotation {
